--- a/Dynopedia/dinosaurio.html
+++ b/Dynopedia/dinosaurio.html
@@ -77,7 +77,7 @@
                 <div id="saurisquios">
                     <h3>Tyrannosaurus rex</h3>
                     <img src="img/SaurisquisTR.jpg">
-                    <p>Peso: peso estimado, entre 6 y 9 toneladas</p>
+                    <p>Nombre: peso estimado, entre 6 y 9 toneladas</p>
                     <p>Altura: 4 metros</p>
                     <p>Longitud: de 12 a 13 metros</p>
                     <p>Dieta: depredador</p>
