--- a/Dynopedia/index.html
+++ b/Dynopedia/index.html
@@ -54,6 +54,7 @@
             </li>
            <a href="tierlist.html"> <li>Tier list</li></a>
             <a href="recetas.html#receta"><li>Recetas </li></a>
+            <a href="dinosaurios.php"><li>Dinosaurios</li></a>
         </ul>
     </aside>
     <main>
