--- a/Dynopedia/tierlist.html
+++ b/Dynopedia/tierlist.html
@@ -51,6 +51,8 @@
             </li>
            <a href="tierlist.html"> <li>Tier list</li></a>
             <a href="recetas.html#receta"><li>Recetas </li></a>
+            <a href="dinosaurios.php"><li>Dinosaurios</li></a>
+
         </ul>
     </aside>
     <main>
