--- a/Dynopedia/era.html
+++ b/Dynopedia/era.html
@@ -56,6 +56,8 @@
             </li>
            <a href="tierlist.html"> <li>Tier list</li></a>
             <a href="recetas.html#receta"><li>Recetas </li></a>
+            <a href="dinosaurios.php"><li>Dinosaurios</li></a>
+
         </ul>
     </aside>
     <h2 id="cretacico">Cretácico</h2><br>
