--- a/Dynopedia/admin.html
+++ b/Dynopedia/admin.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1><a href="../index.php">Volver a la página web</a></h1>
+    <h1><a href="../index.php">Ir a las tablas de administracion</a></h1>
     <header>
         <div class="cabecera">
             <img src="img/logo.png" id="logo">
