--- a/Dynopedia/index.html
+++ b/Dynopedia/index.html
@@ -15,7 +15,7 @@
         <div class="cabecera">
             <img src="img/logo.png" id="logo">
             <ul class="listaNav">
-                <a href="formulario.html">
+                <a href="formulario.php">
                     <li>Iniciar Sesión</li>
                 </a>
                 <a href="admin.html">
