--- a/Dynopedia/admin.html
+++ b/Dynopedia/admin.html
@@ -21,7 +21,7 @@
                 <a href="index.html">
                     <li>Inicio</li>
                 </a>
-                <a href="formulario.html">
+                <a href="formulario.php">
                     <li>Iniciar Sesión</li>
                 </a>
             </ul>
