--- a/Dynopedia/recetas.html
+++ b/Dynopedia/recetas.html
@@ -17,7 +17,7 @@
                 <a href="index.html">
                     <li>Inicio</li>
                 </a>
-                <a href="formulario.html">
+                <a href="formulario.php">
                     <li>Iniciar Sesión</li>
                 </a>
                 <a href="admin.html">
