--- a/Dynopedia/dinosaurio.html
+++ b/Dynopedia/dinosaurio.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categorias</title>
     <style>
+        @import url(style.css);
+
         @import url(dinosauriostyle.css);
     </style>
 </head>
