--- a/Dynopedia/dinosaurio.html
+++ b/Dynopedia/dinosaurio.html
@@ -20,7 +20,7 @@
         <div class="cabecera">
             <img src="img/logo.png" id="logo">
             <ul class="listaNav">
-                <a href="index.html">
+                <a href="index.php">
                     <li>Inicio</li>
                 </a>
                 <a href="formulario.php">
